# cbnetwork

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  cspell.json  exp5_aleatory_linear_circle_10_12_2.csv  future_tasks.txt  pyproject.toml  requirements.txt  sdumont.txt
.tmp_test_env/: pyvenv.cfg
analysis/: cprofile_analysis.py  memoryprofiler_analysis.py
classes/: cbnetwork.py  cbngenerator.py  cnflist.py  couplingsignal.py  directededge.py  globalscene.py  globaltopology.py  internalvariable.py  localnetwork.py  localscene.py  localtemplates.py  pathcircletemplate.py  sdumont.py  templatelocalnetwork.py  topologytemplate.py
examples/: aleatory_CBN_1.py  aleatory_cbn_lineal_10.ipynb  blog  e_aleatory_cbn.py  e_manual_cbn_4.py  e_manual_cbn_lineal_10.py  find_attractors_fields_aleatory.py  find_attractors_fields_aleatory_cbn.py  generate_aleatory_cbn_procedure.py  generate_aleatory_cbn_shell.py  generate_network.py  generator_example.py  n_aleatory_cbn_complete_6.ipynb  n_aleatory_cbn_lineal.ipynb  s_1_manual_10_aleatory_7_lineal.py  s_aleatory_cbn.py  s_aleatory_cbn_lineal_10.py  s_fixed_1_aleatory_10_lineal.py  s_fixed_1_manual_10_lineal.py  s_manual_4.py  s_manual_4_manual.py  s_manual_cbn_4.py  s_manual_cbn_lineal_10.ipynb  s_manual_cbn_lineal_10.py  s_manual_fixed_1_lineal_10.py  s_manual_lineal_10.py  script_cbn.ipynb  script_cbn.py  test_global_topology.ipynb
experiments/: restored_cbn_analysis.ipynb
note_books/: n_aleatory_1_complete.ipynb  n_aleatory_2_binomial_tree.ipynb  n_aleatory_3_cycle.ipynb  n_aleatory_4_path.ipynb  (+7 more)
(+1949 files in other folders)
