[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cbnetwork"
version = "0.1.0"
authors = [
  { name="Carlos", email="tu_email@example.com" },
]
description = "A Python package for simulating and analyzing Coupled Boolean Networks (CBN)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas",
    "networkx",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]